--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <p class="lead"></p>
 
-<p>Follow me on&nbsp;<a href="http://twitter.com/kushalraj_" rel="me">Twitter</a>&nbsp;/&nbsp;<a href="https://plus.google.com/+KushalrajPandey" rel="me">Google+</a>&nbsp;/&nbsp;<a href="http://in.linkedin.com/in/kushalrajp">Linkedin</a></p>
+<p>Follow me on&nbsp;<a href="http://twitter.com/kushalraj_" rel="me">Twitter</a>&nbsp;/&nbsp;<a href="https://plus.google.com/+KushalrajPandey" rel="me">Google+</a>&nbsp;/&nbsp;<a href="http://in.linkedin.com/in/kushalrajpandey">Linkedin</a></p>
 
 <p></p>
 </body>
