--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 </head>
 <body>
-<p>I'm the In-bound Marketing & Business Development person you've been waiting to connect to!</p>
+<p>I'm the Inbound Marketing & Business Development person you've been waiting to connect to!</p>
 
 <p><img alt="" src="images/kushalraj_tn.jpg" style="width: 333px;" /></p>
 
