--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <p>I'm the Inbound Marketing & Business Development person you've been waiting to connect to!</p>
 
-<p><img alt="" src="images/kushalraj_tn.jpg" style="width: 333px;" /></p>
+<p><img alt="" src="images/kushalraj_.jpg" style="width: 333px;" /></p>
 
 <h1><span style="font-size:36px;">Find my blog <a href="http://www.tingemark.com/" rel="me">here</a></span></h1>
 
