--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 </head>
 <body>
-<p>I'm the Inbound Marketing & Business Development person you've been waiting to connect to!</p>
-
+<p>Hi, You!<br>Just stumbled here after clicking on my email signature? or perhapse found this link on the vast internet ocean!<br>
+People say "Kushalraj is the <em>Inbound Marketing & Business Development Expert<em>[sic] you must connect with", but I'd say you decide it for your own self.</p><br>
+Here's me<br>
+|<br>
+˅<br></p>
 <p><img alt="" src="images/Kushalraj_.jpg" style="width: 333px;" /></p>
-
+<br><p>
 <h1><span style="font-size:36px;">Find my blog <a href="http://www.tingemark.com/" rel="me">here</a></span></h1>
 
-<p class="lead"></p>
-
-<p>Follow me on&nbsp;<a href="http://twitter.com/kushalraj_" rel="me">Twitter</a>&nbsp;/&nbsp;<a href="https://plus.google.com/+KushalrajPandey" rel="me">Google+</a>&nbsp;/&nbsp;<a href="http://in.linkedin.com/in/kushalrajpandey">Linkedin</a></p>
-
+<p class="lead"></p>& here are some places to connect with me...
+<p><a href="http://in.linkedin.com/in/kushalrajpandey">Linkedin</a> / <a href="http://twitter.com/kushalraj_" rel="me">Twitter</a> / <a href="https://plus.google.com/+KushalrajPandey" rel="me">Google+ (I wont judge you if you connect with me on G+ :D)</a> / <a href="https://plus.google.com/+KushalrajPandey" rel="me">Google+ (Yes! It exists.)</a></p>
+<p>Email me at <img alt="email" src="images/email_.jpg" style="height: 33px;" /></p>
 <p></p>
 </body>
 </html>
