--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 </head>
 <body>
-<p>Hi, You!<br>Just stumbled here after clicking on my email signature? or perhapse found this link on the vast internet ocean!<br>
-People say "Kushalraj is the <em>Inbound Marketing & Business Development Expert</em>[sic] you must connect with", but I'd say you decide it for your own self.</p><br>
-Here's me<br>
-<p><img alt="" src="images/Kushalraj_.jpg" style="width: 333px;" /></p>
+<p>Hi, You!
 <br>
-<p class="lead"></p>& here are some places to connect with me...
+Here's me,<br>
+<p><img alt="" src="images/Kushalraj_.jpg" style="width: 321px;"/></p>
+<br>
+Stumbled here after clicking on my email signature? or <br>
+perhapse found this link on the vast internet ocean?
+<br>
+<p>I've heard people say "Kushalraj is the <em>Inbound Marketing & Business Development Expert</em>[sic] you must connect with", I'd say connect with me and find it for your own self.</p>
+<br>
+<p class="lead"></p>so here are some places I linger at...
 <p><a href="http://in.linkedin.com/in/kushalrajpandey">Linkedin</a> / <a href="http://twitter.com/kushalraj_" rel="me">Twitter</a> / <a href="https://plus.google.com/+KushalrajPandey" rel="me">Google+ // yes, it exists! add me to your <b>Circle<b> :D //</a></p>
-<p>Email me at <img alt="email" src="images/email_.jpg" style="height: 33px;" /></p>
-<p></p>
+<p>Email isn't outdated, drop me one at <img alt="email" src="images/email_.jpg" style="height: 20px;" /> and I will for sure reply within <b>26<b> hours (Pro Tip- Ask me why it is <b>26<b>, that's good starting point).</p>
+<br>
 </body>
 </html>
