--- a/index.html
+++ b/index.html
@@ -4,19 +4,32 @@
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 	<title>Hey! You're reached Kushalraj's homepage.</title>
 	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600" rel="stylesheet">
+	<style>
+	p 
+	{
+		font: 400 14px/1.5 'Open Sans', sans-serif;
+	}
+	em
+	{
+		font: 400i 14px/1.5 'Open Sans', sans-serif;
+	}
+	b
+	{
+		font: 600 14px/1.5 'Open Sans', sans-serif;
+	}
+	</style>
 </head>
 <body>
 <p>Hi, You!</p>
-<br>
 <p>Here's me,<br>
 <img alt="" src="images/Kushalraj_.jpg" style="height: 210px;"/></p>
-<br>
 <p>Stumbled here after clicking on my email signature? or <br>
 perhapse found this link on the vast internet ocean?</p>
 <p>I've heard people say "Kushalraj is the <em>Inbound Marketing & Business Development Expert</em>[sic] you must connect with", I'd say connect with me and find it for your own self.</p>
-<p class="lead"></p>so here are some places I linger at...<p>
-<p><a href="http://in.linkedin.com/in/kushalrajpandey">Linkedin</a> / <a href="http://twitter.com/kushalraj_" rel="me">Twitter</a> / <a href="https://plus.google.com/+KushalrajPandey" rel="me">Google+</a> //it exists! add me to your <b>Circle</b> :D //</p>
-<p>Email isn't outdated, drop me one at <img alt="email" src="images/email_.jpg" style="height: 20px;" /> and I will for sure reply within <b>26<b> hours (Pro Tip- Ask me why it is <b>26<b>, that's good starting point).</p>
+<p>so here are some places I linger at...</p>
+<p><a href="http://in.linkedin.com/in/kushalrajpandey">Linkedin</a> / <a href="http://twitter.com/kushalraj_" rel="me">Twitter</a> / <a href="https://plus.google.com/+KushalrajPandey" rel="me">Google+</a></p>
+<p>Email isn't outdated yet, drop me one at <img alt="email" src="images/email_.jpg" style="height: 20px;" /> and I will for sure reply within <b>26</b> hours (Pro Tip- Ask me why it is <b>26</b>, that's good starting point).</p>
 <br>
 </body>
 </html>
