--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <p>Stumbled here after clicking on my email signature? or <br>
 perhapse found this link on the vast internet ocean?</p>
 <p>I've heard people say "Kushalraj is the <em>Inbound Marketing & Business Development Expert</em>[sic] you must connect with", I'd say connect with me and find it for your own self.</p>
-<p>so here are some places I linger at...</p>
-<p><a href="http://in.linkedin.com/in/kushalrajpandey">Linkedin</a> / <a href="http://twitter.com/kushalraj_" rel="me">Twitter</a> / <a href="https://plus.google.com/+KushalrajPandey" rel="me">Google+</a></p>
-<p>Email isn't outdated yet, drop me one at <img alt="email" src="images/email_.jpg" style="height: 20px;" /> and I will for sure reply within <b>26</b> hours (Pro Tip- Ask me why it is <b>26</b>, that's good starting point).</p>
+<p>so here are some places I linger at...<br>
+<a href="http://in.linkedin.com/in/kushalrajpandey">Linkedin</a> / <a href="http://twitter.com/kushalraj_" rel="me">Twitter</a> / <a href="https://plus.google.com/+KushalrajPandey" rel="me">Google+</a></p>
+<p>Email isn't outdated yet, drop me one at <img alt="email" src="images/reachout.png" /> and I will for sure reply within <b>26</b> hours (Pro Tip- Ask me why it is <b>26</b>, that's good starting point).</p>
 <br>
 </body>
 </html>
