--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 </head>
 <body>
 <p>Hi, You! 
-Here's me,<br>
-<img alt="" src="images/Kushalraj_.jpg" style="height: 210px;"/></p>
+here's me,</p>
+<p><img alt="" src="images/Kushalraj_.jpg" style="height: 210px;"/></p>
 <p>Stumbled here after clicking on my email signature? or <br>
 perhapse found this link on the vast internet ocean?</p>
 <p>I've heard people say "Kushalraj is the <em>Inbound Marketing & Business Development Expert</em>[sic] you must connect with", I'd say connect with me and find it for your own self.</p>
 <p><a href="http://in.linkedin.com/in/kushalrajpandey">Linkedin</a> / <a href="http://twitter.com/kushalraj_" rel="me">Twitter</a> / <a href="https://plus.google.com/+KushalrajPandey" rel="me">Google+</a> are some online places I linger.</p>
-<p>Email isn't outdated yet so drop me one at <img src="images/reachout.png" style="height: 17px;" /> and I will for sure reply within <b>26</b> hours (Pro tip: Ask me why its <b>26</b>, good starting point huh?).</p>
+<p>Email isn't outdated yet, so drop me one at <img src="images/reachout.png" style="height: 17px;" /> and I will for sure reply within <b>26</b> hours (Pro tip: Ask me why its <b>26</b>. Good starting point, huh?).</p>
 <br>
 </body>
 </html>
