--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-	<title>Hey! You're reached Kushalraj's homepage.</title>
+	<title>Vasool | The Cheesy Restaurant</title>
 	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600" rel="stylesheet">
 	<style>
@@ -21,14 +21,8 @@
 	</style>
 </head>
 <body>
-<p>Hi, You! 
-here's me,</p>
-<p><img alt="" src="images/Kushalraj_.jpg" style="height: 210px;"/></p>
-<p>Stumbled here after clicking on my email signature?<br>
-perhaps found this link on the open internet?</p>
-<p>I've heard people say "Kushalraj is the <em>Inbound Marketing & Business Development Expert</em>[sic] you must connect with", I'd say connect with me and find it for your own self.</p>
-<p><a href="http://in.linkedin.com/in/kushalrajpandey">Linkedin</a> / <a href="http://twitter.com/kushalraj_" rel="me">Twitter</a> / <a href="https://plus.google.com/+KushalrajPandey" rel="me">Google+</a> are some online places I linger.</p>
-<p>Email isn't outdated yet, so drop me one at <img src="images/reachout.png" style="height: 17px;" /> and I will for sure reply within <b>26</b> hours (Pro tip: Ask me why its <b>26</b>. Good starting point, huh?).</p>
-<br>
+<!-- If you would like to customize the button, remove or change the "class" attribute inside the <span> tag --> 
+<span class="glf-button" data-glf-cuid="fb3facba-4ab2-4dd9-a6c2-bf4e0bc8dee8" data-glf-ruid="0c1bcea9-dbd0-4391-952d-022fcdf230b5" data-glf-auto-open="false"> See MENU & Order</span> 
+<script src="https://www.foodbooking.com/widget/js/ewm2.js" defer async ></script>
 </body>
 </html>
