--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 	<title>Vasool | The Cheesy Restaurant</title>
 	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
+	<link rel="icon" type="image/png" href="images/favicon.png" sizes="32x32" />
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600" rel="stylesheet">
 	<style>
 	p 
