--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
 	</style>
 </head>
 <body>
+<center>
+	
 <!-- If you would like to customize the button, remove or change the "class" attribute inside the <span> tag --> 
-<span class="glf-button" data-glf-cuid="fb3facba-4ab2-4dd9-a6c2-bf4e0bc8dee8" data-glf-ruid="0c1bcea9-dbd0-4391-952d-022fcdf230b5" data-glf-auto-open="false"> See MENU & Order</span> 
+<span class="glf-button" data-glf-cuid="fb3facba-4ab2-4dd9-a6c2-bf4e0bc8dee8" data-glf-ruid="0c1bcea9-dbd0-4391-952d-022fcdf230b5" data-glf-auto-open="false">I'm here for Vasooli</span> 
 <script src="https://www.foodbooking.com/widget/js/ewm2.js" defer async ></script>
+
+</center>
 </body>
 </html>
